--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,16 @@ pipeline/data_links/
 
 # --- pipeline: datasets (data / symlink / generated images) ---
 # 忽略重组数据入口（symlink）
-pipeline/Datasets/**/Glas_new*/
-pipeline/Datasets/**/Glas_org*/
+pipeline/datasets/**/Glas_new*/
+pipeline/datasets/**/Glas_org*/
 
 # 忽略由脚本生成的图片产物（只在 Datasets 下面生效）
 # pipeline/Datasets/**/*.bmp
 # pipeline/Datasets/**/*.png
 
 # 如果你只想忽略特定生成目录，比忽略所有 bmp/png 更安全（可二选一）
-pipeline/Datasets/**/side_by_side/
-pipeline/Datasets/**/vis_out/
+pipeline/datasets/**/side_by_side/
+pipeline/datasets/**/vis_out/
 
 # --- experiments (logs, checkpoints, runs) ---
 pipeline/experiments/
